# HTN252

./: .gitignore  .gitmodules  DASHBOARD_SETUP.md  README.md  information_for_ai.txt  package-lock.json  package.json  pyproject.toml  schema.txt  wrangler.toml  xrpl_wallet_interaction.ipynb
.github/workflows/: cloud-run.yml  codeql.yml  premerge-tests.yml  preview.yml  prod.yml
NGO-dashboard/: package.json  tailwind.config.ts  wrangler.toml
NGO-dashboard/app/: page.tsx
NGO-dashboard/components/: auth-wrapper.tsx  dashboard-header.tsx  financial-overview.tsx
NGO-dashboard/contexts/: auth-context.tsx
NGO-dashboard/lib/: api.ts
api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  warmup_models.py
api/src/: app.py  models.py
api/src/core/: auth.py  config.py  face.py  persona_client.py  utils.py
api/src/routers/: accounts.py  auth.py  credentials.py  dashboard.py  donor.py  face.py  meta.py  persona.py  recipients.py
api/tests/: conftest.py  test_utils.py  test_wallet.py  test_xrpl.py
donor-dashboard/: package.json  wrangler.toml
donor-dashboard/__tests__/: donation-form.test.tsx  donor-dashboard.test.tsx  impact-dashboard.test.tsx
donor-dashboard/app/: layout.tsx
donor-dashboard/components/: StripePay.tsx  audit-trail.tsx  blockchain-tracker.tsx  donation-form.tsx  donor-dashboard.tsx  impact-dashboard.tsx
donor-dashboard/lib/: api.ts  config.ts  format.ts
donor-dashboard/types/: ngo.ts
functions/: .vc-config.json
landing/: package.json  vitest.config.ts  wrangler.toml
landing/app/: layout.tsx
master-landing/: package.json  wrangler.toml
payment-terminal/: package.json  wrangler.toml
payment-terminal/components/: camera-view.tsx  payment-actions.tsx  payment-terminal.tsx  transaction-summary.tsx  wallet-details.tsx
payment-terminal/lib/: utils.ts
scripts/: run-next-with-port.mjs
src/: app.py  auth.py  models.py  oauth.py  process.env
src/NGO-dashboard/: .gitignore  package-lock.json  package.json  tailwind.config.ts
src/api/: app.py
src/core/: auth.py  config.py  database.py  face.py  wallet.py  xrpl.py
src/donor-dashboard/: package-lock.json  package.json  pnpm-lock.yaml  vitest.setup.tsx
src/landing/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.setup.tsx
src/master-landing/: package.json
src/payment-terminal/: package-lock.json  package.json  tsconfig.json
src/routers/: accounts.py  (+9 more)
store-dashboard/: package.json  wrangler.toml
tests/: conftest.py  test_utils.py  test_wallet.py  test_xrpl.py
user-creation-terminal/: package.json  wrangler.toml
(+289 files in other folders)
