[project]
name = "HTN25-2"
version = "0.1.0"
description = "HTN project."
readme = "README.md"
authors = [
    { name = "Peterson Guo", email = "petersonguo@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy>=1.20",
    "python-dotenv",
    "supabase",
    "requests",
    "flasgger",
    "apispec",
    "marshmallow",
    "apispec_webframeworks",
    "xrpl-py",
    "PyJWT",
    "passlib[bcrypt]",
    "email-validator",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[project.scripts]
# my-command = "my_awesome_package.cli:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']