[project]
name = "HTN25-2"
version = "0.1.0"
description = "HTN project."
readme = "README.md"
authors = [
    { name = "Peterson Guo", email = "petersonguo@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy<=2.0.0",
    "python-dotenv",
    "supabase",
    "requests",
    "stripe",
    "flasgger",
    "apispec",
    "marshmallow",
    "apispec_webframeworks",
    "xrpl-py",
    "PyJWT",
    "passlib[bcrypt]",
    "email-validator",
    "python-multipart",
    "insightface==0.7.3",
    "onnx<1.20",
    "onnxruntime>=1.15,<1.19",
    "pillow",
    "numpy",
    "faiss-cpu",
    "psycopg[binary]",
    "opencv-python-headless<4.9",
    "ml-dtypes<0.4",
    "scipy<1.12",
    "cerebras-cloud-sdk",
    "ccxt",
    "cryptography"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "pip-tools"
]

[project.scripts]
# my-command = "my_awesome_package.cli:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
